# SpaceFighter

./: Blt.cpp  Blt.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Controller.cpp  Controller.h  Enemy.cpp  Enemy.h  Enemy.qml  README.md  bullet.qml  class1.cpp  class1.h  class2.cpp  class2.h  main.cpp  main.qml
assets/: assets.qrc  enemy
